# nge

./: .gitignore  CMakeLists.txt
src/: Circle.cpp  Circle.h  Crosshair.cpp  Crosshair.h  Entity.cpp  Entity.h  Game.cpp  Game.h  SfmlGame.cpp
